--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ DB_PORT=3306
 DB_DATABASE=sendnotes
 DB_USERNAME=root
 DB_PASSWORD=
+DB_URL=postgres://postgres:w9OAIrrjzWXPWhj@sendnotes-database.flycast:5432
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
